# level2_objectdetection-cv-15

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
codebook/: EDA.ipynb  ensemble_WBF.py  groupKfold.ipynb  pseudo_labeling.ipynb
mmdetection/: README.md  inference.py  pyproject.toml  test.py  train.py  train_p.py  trash.py
mmdetection/custom_configs/: custom_1x.py
mmdetection/custom_configs/__base__/datasets/: trash_detection.py
mmdetection/custom_configs/_base_/datasets/: trash_detection.py
mmdetection/mmdet/core/hook/: wandblogger_hook.py
mmdetection/mmdet/datasets/: __init__.py  trash.py
mmdetection/utils/: __init__.py  utils.py
